; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvideo/extr_quickcam_messenger.c_qcm_free_uvd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/usbvideo/extr_quickcam_messenger.c_qcm_free_uvd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uvd = type { i64 }
%struct.qcm = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uvd*)* @qcm_free_uvd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qcm_free_uvd(%struct.uvd* %0) #0 {
  %2 = alloca %struct.uvd*, align 8
  %3 = alloca %struct.qcm*, align 8
  store %struct.uvd* %0, %struct.uvd** %2, align 8
  %4 = load %struct.uvd*, %struct.uvd** %2, align 8
  %5 = getelementptr inbounds %struct.uvd, %struct.uvd* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to %struct.qcm*
  store %struct.qcm* %7, %struct.qcm** %3, align 8
  %8 = load %struct.qcm*, %struct.qcm** %3, align 8
  %9 = getelementptr inbounds %struct.qcm, %struct.qcm* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @kfree(i32 %10)
  %12 = load %struct.qcm*, %struct.qcm** %3, align 8
  %13 = call i32 @qcm_unregister_input(%struct.qcm* %12)
  %14 = load %struct.qcm*, %struct.qcm** %3, align 8
  %15 = call i32 @qcm_free_int(%struct.qcm* %14)
  ret void
}

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @qcm_unregister_input(%struct.qcm*) #1

declare dso_local i32 @qcm_free_int(%struct.qcm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
